tests/ui/abi/simd-abi-checks-sse.stderr
error: this function definition uses SIMD vector type `Simd<i64, 2>` which (with the chosen ABI) requires the `sse` target feature, which is not enabled
  --> $DIR/simd-abi-checks-sse.rs:17:1
   |
LL | pub unsafe extern "C" fn f(_: Simd<i64, 2>) {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ function defined here
   |
   = help: consider enabling it globally (`-C target-feature=+sse`) or locally (`#[target_feature(enable="sse")]`)

error: aborting due to 1 previous error

